# provision_gateway

./: .gitignore  LICENSE  copilot-instructions.md  design.md  docker-compose.gateway.yml  requirements.md  updated_design.md
_ignore/: IMPLEMENTATION.md  deploy-form.md  features.md  tasks-20260705-2.md  tasks-20260705-3.md  tasks-20260705.md  updated_design.md
_tasks/: tasks-20260705-2.md  (+1 more)
provision-gateway/: Dockerfile  pyproject.toml  task_registry.json
provision-gateway/app/: __init__.py  config.py  database.py  main.py
provision-gateway/app/lib/: __init__.py  compose_converter.py  nginx_converter.py
provision-gateway/app/middleware/: __init__.py
provision-gateway/app/models/: __init__.py  admin.py  audit_log.py  end_user.py  gateway_setting.py  llm_config.py  proxy_config.py  service_template.py  system_config.py
provision-gateway/app/routers/: __init__.py  audit.py  auth.py  llm.py  services.py  system.py  tasks.py  users.py
provision-gateway/app/schemas/: __init__.py  audit.py  auth.py  llm.py  proxy.py  services.py  system.py  tasks.py  users.py
provision-gateway/app/services/: __init__.py  audit_service.py  auth_service.py  curl_service.py  docker_service.py  llm_service.py  provision_service.py  proxy_service.py  reconciliation.py  service_manager.py
provision-gateway/app/utils/: __init__.py  crypto.py  file_scanner.py  nginx_parser.py
provision-gateway/tests/: conftest.py  test_architecture.py  test_deploy.sh  test_gateway_api.sh  test_integration.py  test_integration.sh  test_provision_api.sh  test_proxy.py  test_proxy.sh  test_unit.py
(+54 files in other folders)
